[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/panel.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player/Player.png" type="Texture" id=2]
[ext_resource path="res://Assets/fonts/FredokaOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://MainMenu/Font14.tres" type="DynamicFont" id=4]
[ext_resource path="res://MainMenu/PlayerPanel.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
use_filter = true
extra_spacing_bottom = -5
font_data = ExtResource( 3 )

[node name="PlayerPanel" type="Control"]
margin_right = 390.0
margin_bottom = 120.0
rect_min_size = Vector2( 380, 120 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 370.0
margin_bottom = 100.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 44.0
margin_bottom = 100.0
size_flags_horizontal = 0

[node name="PlayerSprite" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer"]
margin_top = 22.0
margin_right = 44.0
margin_bottom = 77.0
mouse_filter = 0
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 346.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer"]
margin_right = 298.0
margin_bottom = 100.0

[node name="PlayerName" type="TextEdit" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 298.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
mouse_default_cursor_shape = 0
custom_fonts/font = SubResource( 1 )
text = "Player Name"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 298.0
margin_bottom = 97.0
columns = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 1.0
margin_right = 61.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 4 )
text = "Controls:"

[node name="ControlOption" type="OptionButton" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 65.0
margin_right = 215.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )
toggle_mode = false

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 25.0
margin_right = 61.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 4 )
text = "Color:"

[node name="ColorPickerButton" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 65.0
margin_top = 24.0
margin_right = 215.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 49.0
margin_right = 61.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 4 )
text = "Team:"

[node name="TeamOption" type="OptionButton" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 65.0
margin_top = 48.0
margin_right = 215.0
margin_bottom = 68.0
toggle_mode = false

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 350.0
margin_right = 370.0
margin_bottom = 100.0
text = "X"

[node name="ColorPicker" type="ColorPicker" parent="."]
visible = false
anchor_left = 0.122
anchor_top = 0.75
anchor_right = 0.34
anchor_bottom = 0.75
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/GridContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="color_changed" from="ColorPicker" to="." method="_on_color_changed"]
